[gd_scene load_steps=7 format=3 uid="uid://c77rya46ib0rg"]

[ext_resource type="Script" path="res://menus/level_select/level_container.gd" id="1_csrqu"]
[ext_resource type="FontFile" uid="uid://brxcmskbwk081" path="res://menus/daydream_3/Daydream.ttf" id="1_lh7uk"]
[ext_resource type="StyleBox" uid="uid://c8splfuvu8vq2" path="res://menus/level_select/level_container_button.tres" id="2_4123d"]
[ext_resource type="PackedScene" uid="uid://cyukkc7p2ok7i" path="res://menus/scene_change_node.tscn" id="3_v8mbk"]
[ext_resource type="AudioStream" uid="uid://ce6xsgjdkpp1k" path="res://entities/squid/pop.wav" id="6_0p7hj"]
[ext_resource type="AudioStream" uid="uid://dt0ecaox8pf86" path="res://menus/single_shuffle.wav" id="7_ounao"]

[node name="level_container" type="Control"]
custom_minimum_size = Vector2(400, 800)
layout_mode = 3
anchors_preset = 0
offset_right = 400.0
offset_bottom = 800.0
pivot_offset = Vector2(250, 250)
script = ExtResource("1_csrqu")

[node name="Time" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
offset_left = -43.0
offset_top = -1.0
offset_right = 457.0
offset_bottom = 177.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_lh7uk")
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]00:00[/center]"

[node name="Name" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 50)
layout_mode = 2
offset_left = -52.0
offset_top = 724.0
offset_right = 448.0
offset_bottom = 774.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_lh7uk")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "[center]name[/center]"

[node name="StarCount" type="RichTextLabel" parent="."]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
offset_left = -52.0
offset_top = -60.0
offset_right = 448.0
offset_bottom = 79.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/default_color = Color(0.968627, 0.784314, 0, 1)
theme_override_fonts/normal_font = ExtResource("1_lh7uk")
theme_override_font_sizes/normal_font_size = 80
bbcode_enabled = true
text = "[center]* * *[/center]"

[node name="Button" type="Button" parent="."]
z_index = -1
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("2_4123d")
theme_override_styles/hover = ExtResource("2_4123d")
theme_override_styles/pressed = ExtResource("2_4123d")
theme_override_styles/focus = ExtResource("2_4123d")
clip_text = true

[node name="Color1" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 66.0
offset_right = 400.0
offset_bottom = 216.0
color = Color(1, 0.34902, 1, 1)

[node name="Color2" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 214.0
offset_right = 400.0
offset_bottom = 364.0
color = Color(1, 0.34902, 1, 1)

[node name="Color3" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 363.0
offset_right = 400.0
offset_bottom = 513.0
color = Color(1, 0.34902, 1, 1)

[node name="Color4" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 512.0
offset_right = 400.0
offset_bottom = 662.0
color = Color(1, 0.34902, 1, 1)

[node name="SceneChangeNode" parent="." instance=ExtResource("3_v8mbk")]

[node name="FipThrough" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_0p7hj")
volume_db = -15.0

[node name="Shuffle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_ounao")
volume_db = -5.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
